#181 - feat/separateDataAcrossBranchesManager - @duclnph24870 - feat: separate Data Across Branches Manager
