# src/docs/swagger_datn.yaml
@@ -14,8 +14,6 @@ tags:
       description: 'Đăng nhập/Đăng xuất'
     - name: 'Semesters'
       description: 'Kỳ học'
-    - name: 'Managers'
-      description: 'Quản lý (Nhân viên)'
     - name: 'Campus'
       description: 'Cơ sở'
 
@@ -147,117 +145,6 @@ paths:
                     description: 'successful operation'
                 '400':
                     description: 'Invalid narrow'
-    /manager:
-        get:
-            security:
-                - Bearer: []
-            tags:
-                - 'Managers'
-            summary: 'Danh sách doanh nghiệp'
-            description: ''
-            produces:
-                - 'application/json'
-            responses:
-                '200':
-                    description: 'successful operation'
-                '400':
-                    description: 'Invalid manager'
-        post:
-            security:
-                - Bearer: []
-            tags:
-                - 'Managers'
-            summary: 'Thêm mới doanh nghiệp'
-            description: ''
-            produces:
-                - 'application/json'
-            parameters:
-                - name: 'body'
-                  in: 'body'
-                  description: 'Tham số key/value, 0-nhân viên, 1-quản lý, 2-dev'
-                  required: true
-                  schema:
-                      type: 'object'
-                      properties:
-                          name:
-                              type: 'string'
-                              default: 'example swagger'
-                          email:
-                              type: 'string'
-                              default: 'example@gmail.com'
-                          campus_id:
-                              type: 'string'
-                              default: '6247da5ee56ba5e634559901'
-                          role:
-                              type: 'string'
-                              default: '0'
-            responses:
-                '201':
-                    description: 'successful operation'
-                '202':
-                    description: 'Already exit narrow'
-                '400':
-                    description: 'Invalid manager'
-    /manager/{id}:
-        patch:
-            security:
-                - Bearer: []
-            tags:
-                - 'Managers'
-            summary: 'Cập nhật thông tin manager'
-            description: ''
-            produces:
-                - 'application/json'
-            parameters:
-                - name: 'id'
-                  in: 'path'
-                  description: 'Id của manager , lấy ở phần danh sách manager'
-                  required: true
-                  type: 'string'
-                - name: 'body'
-                  in: 'body'
-                  description: 'Tham số key/value, id lấy ở danh sách manager'
-                  required: true
-                  schema:
-                      type: 'object'
-                      properties:
-                          name:
-                              type: 'string'
-                              default: 'example swagger'
-                          email:
-                              type: 'string'
-                              default: 'example@gmail.com'
-                          campus_id:
-                              type: 'string'
-                              default: '6247da5ee56ba5e634559901'
-                          role:
-                              type: 'string'
-                              default: '0'
-            responses:
-                '200':
-                    description: 'successful operation'
-                '400':
-                    description: 'Invalid manager'
-        delete:
-            security:
-                - Bearer: []
-            tags:
-                - 'Managers'
-            summary: 'Xoá manager'
-            description: ''
-            produces:
-                - 'application/json'
-            parameters:
-                - name: 'id'
-                  in: 'path'
-                  description: 'Id của manager , lấy ở phần danh sách manager'
-                  required: true
-                  type: 'string'
-            responses:
-                '200':
-                    description: 'successful operation'
-                '400':
-                    description: 'Invalid manager'
     /cumpus:
         get:
             security:
